# KCOSS

./: .gitignore  README.md
kmer_counter/: CMakeLists.txt  ConcurrentBloomfilter.h  Counter.cpp  Counter.h  HashTable1.h  HashTable2.h  README.md  ThreadPool.h  ThreadPool_stable.h  _concurrentqueue.h  concurrent_bloom_filter.h  concurrent_hash_map.h  count_15to32.cpp  count_15to32.h  count_15to32_2.cpp  count_15to32_2.h  count_33to64.cpp  count_33to64.h  counter_less_than_14.cpp  counter_less_than_14.h  definition.h  executor.h  fasta_reader.h  fixed_size_thread_pool_parameterized.h  function_def.h  function_def2.h  main.cpp  resource.h  test.h  write_thread.h
kmer_counter/include/: cmdline.h  xxhash.c  xxhash.h
kmer_counter/test_file/: test_data.fa  test_data2.fa
kmer_dump/: CMakeLists.txt  HashTable1.h  HashTable1_backup.h  HashTable2.h  README.md  ThreadPool_stable.h  base.h  concurrentqueue.h  deal_c_reads.h  deal_c_reads2.h  deal_hashtable1.h  def.h  def2.h  g_hashtable.h  g_hashtable2.h  main.cpp  write_hash_table_15_32.h  write_hash_table_33_64.h  write_hash_table_less_than_14.h  write_thread.h
kmer_tool/: CMakeLists.txt  Cmdline.h  ConcurrentBloomfilter.h  File.h  Histo.h  Query.h  ThreadPool_stable.h  Tool.h  concurrentqueue.h  main.cpp
